frontends/default/stylesheets/stylesheet.css
/*
 ActiveScaffold
 (c) 2007 Richard White <rrwhite@gmail.com>

 ActiveScaffold is freely distributable under the terms of an MIT-style license.

 For details, see the ActiveScaffold web site: http://www.activescaffold.com/
*/

.active-scaffold form,
.active-scaffold table,
.active-scaffold p,
.active-scaffold div,
.active-scaffold fieldset {
margin: 0;
padding: 0;
}

.active-scaffold {
margin: 5px 0;
}

.active-scaffold table {
width: 100%;
border-collapse: separate;
}

.active-scaffold a,
.active-scaffold a:visited {
color: #06c;
text-decoration: none;
}

.active-scaffold a.disabled {
color: #999;
}

.active-scaffold a:hover, .active-scaffold span.hover {
background-color: #ff8;
}

.active-scaffold div.actions a img,
.active-scaffold td.actions a img {
border: none;
vertical-align: middle;
}

.active-scaffold div.actions a.disabled img,
.active-scaffold td.actions a.disabled img {
opacity: 0.5;
}

.active-scaffold .clear-fix {
clear: both;
}

noscript.active-scaffold {
border-left: solid 5px #f66;
background-color: #fbb;
font-size: 11px;
font-weight: bold;
padding: 5px 20px 5px 5px;
color: #333;
}

/* Header
   ======================== */

.active-scaffold-header {
position: relative;
}

.blue-theme .active-scaffold-header {
background-color: #005CB8;
}

.active-scaffold-header h2 {
padding: 2px 0px;
margin: 0;
color: #555;
font: bold 160% arial, sans-serif;
}

.blue-theme .active-scaffold-header h2 {
color: #fff;
padding: 2px 5px 4px 5px;
}

.active-scaffold-header div.actions a,
.active-scaffold-header div.actions span {
float: right;
font: bold 14px arial;
letter-spacing: -1px;
text-decoration: none;
padding: 1px 2px;
white-space: nowrap;
margin-left: 5px;
background-position: 1px 50%;
background-repeat: no-repeat;
}

.active-scaffold-header div.actions div.action_group {
display: inline;
float: right;
}

.active-scaffold-header div.actions div.action_group li a,
.active-scaffold-header div.actions div.action_group li span {
float: none;
margin: 0 2px;
padding: 2px;
}

.active-scaffold-header div.actions .action_group ul {
line-height: 130%;
top: 14px;
}

.view .active-scaffold-header div.actions a,
.view .active-scaffold-header div.actions span,
.view .active-scaffold-header div.actions div.action_group {
float: left;
}

.blue-theme .active-scaffold-header div.actions a {
color: #fff;
}

.active-scaffold-header div.actions a.disabled {
color: #666;
opacity: 0.5;
}

.blue-theme .active-scaffold-header div.actions a.disabled {
color: #fff;
opacity: 0.5;
}

.active-scaffold-header div.actions a.new,
.active-scaffold-header div.actions a.new_existing,
.active-scaffold-header div.actions a.show_search {
padding-left: 19px;
background-position: 1px 50%;
background-repeat: no-repeat;
}

.active-scaffold-header div.actions a.new,
.active-scaffold-header div.actions a.new_existing {
background-image: url(../../../images/active_scaffold/default/add.gif);
}

.active-scaffold-header div.actions a.show_search {
background-image: url(../../../images/active_scaffold/default/magnifier.png);
}

.blue-theme .active-scaffold-header div.actions a:hover {
background-color: #378CDF;
}

.active-scaffold-header div.actions a.disabled:hover {
background-color: transparent;
cursor: default;
}

.active-scaffold-header div.actions {
position: absolute;
right: 5px;
top: 5px;
text-align: right;
}

/* Table :: Column Headers
   ============================= */

.active-scaffold th {
background-color: #555;
text-align: left;
}

.active-scaffold th a,
.active-scaffold th p {
font: bold 11px arial, sans-serif;
display: block;
background-color: #555;
}

.active-scaffold th a, .active-scaffold th a:visited {
color: #fff;
padding: 2px 15px 2px 5px;
}

.active-scaffold th p {
color: #eee;
padding: 2px 5px;
}

.active-scaffold th a:hover {
background-color: #000;
color: #ff8;
}

.active-scaffold th.sorted {
background-color: #333;
}

.active-scaffold th.asc a,
.active-scaffold th.asc a:hover {
background: #333 url(../../../images/active_scaffold/default/arrow_up.gif) right 50% no-repeat;
}

.active-scaffold th.desc a,
.active-scaffold th.desc a:hover {
background: #333 url(../../../images/active_scaffold/default/arrow_down.gif) right 50% no-repeat;
}

.active-scaffold th.loading a,
.active-scaffold th.loading a:hover {
background: #333 url(../../../images/active_scaffold/default/indicator-small.gif) right 50% no-repeat;
}

/* Table :: Record Rows
   ============================= */

.active-scaffold tr.record {
  background-color: #E6F2FF;
}
.active-scaffold tr.record td {
padding: 5px 4px;
color: #333;
font-family: Verdana, sans-serif;
font-size: 11px;
border-bottom: solid 1px #C5DBF7;
border-left: solid 1px #C5DBF7;
}

.active-scaffold tr.record td.messages-container {
padding: 0px;
}

.active-scaffold tr.even-record {
background-color: #fff;
}
.active-scaffold tr.even-record td {
border-left-color: #ddd;
}

.active-scaffold tr.record td.sorted {
background-color: #B9DCFF;
border-bottom-color: #AFD0F5;
}

.active-scaffold tr.even-record td.sorted {
background-color: #E6F2FF;
border-bottom-color: #AFD0F5;
}

.active-scaffold tbody.records td.empty {
color: #999;
text-align: center;
}

.active-scaffold td.numeric,
.active-scaffold-calculations td {
text-align: right;
}

/* Table :: Actions (Edit, Delete)
   ============================= */
.active-scaffold tr.record td.actions {
border-right: solid 1px #ccc;
padding: 0;
min-width: 1%;
}

.active-scaffold tr.record td.actions table {
float: right;
width: auto;
margin-right: 5px;
}

.active-scaffold tr.record td.actions table td {
border: none;
text-align: right;
padding: 0 2px;
}

.active-scaffold tr.record td.actions a,
.active-scaffold tr.record td.actions span {
font: bold 11px verdana, sans-serif;
letter-spacing: -1px;
padding: 2px;
margin: 0 2px;
line-height: 16px;
white-space: nowrap;
}

.active-scaffold .actions .action_group span:hover {
background-color: #ff8;
}

.active-scaffold .actions .action_group {
position: relative;
text-align: right;
color: #0066CC;
}
/* ... */

